# fugusashi

./: .gitignore  Dockerfile  LICENSE  LIVING.md  README.md  SECURITY.md  app.py  config.yaml  hf_model_readme.md  pyproject.toml  requirements.txt
.fugusashi_data/: outcomes.jsonl
.github/workflows/: ci.yml
docs/: index.html
paper/: main.tex
src/fugusashi/: __main__.py  benchmark.py  config.py  coordinator.py  dataset.py  federated.py  feedback.py  grpo.py  openrouter.py  orchestrator.py  providers.py  server.py  tracker.py  training.py
src/fugusashi/api/: routes.py
src/fugusashi/router/: __init__.py  ensemble.py  interface.py  learned.py  strategies.py
src/fugusashi/static/: dashboard.html
tests/: test_integration.py  test_learned.py  test_orchestrator.py
