[project]
name = "fugusashi"
version = "1.0.0"
description = "Open-source intelligent model router and multi-agent orchestrator. The open alternative to Sakana AI's Fugu."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "eulogik", email = "gautam@eulogik.com"},
]
keywords = ["llm", "model-router", "ai", "open-source", "orchestrator", "litellm", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.60,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "sentence-transformers>=3.4,<4.0",
    "numpy>=1.26,<2.0",
    "pyyaml>=6.0,<7.0",
    "click>=8.1,<9.0",
    "httpx>=0.28,<1.0",
    "rich>=13.9,<14.0",
]

[project.urls]
Homepage = "https://eulogik.com"
Documentation = "https://eulogik.github.io/fugusashi/"
Repository = "https://github.com/eulogik/fugusashi"
Issues = "https://github.com/eulogik/fugusashi/issues"
Changelog = "https://github.com/eulogik/fugusashi/blob/main/LIVING.md"

[project.scripts]
fugusashi = "fugusashi.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
fugusashi = ["static/*"]
